<resources>
    <string name="app_name">CtrlProdutos</string>
    <string name="title_home">Início</string>
    <string name="title_dashboard">Painel</string>
    <string name="title_notifications">Avisos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_cad_produto">Cad. Produto</string>
    <string name="marca">Marca</string>
    <string name="r_350_00">R$350,00</string>
    <string name="pre_o_unidade">Preço (Unidade)</string>
    <string name="_0511_25">0511/25</string>
    <string name="numero_de_identifica_o">Numero de Identificação</string>
    <string name="quantidade">Quantidade</string>
    <string name="disjuntor_motor_25a">Disjuntor Motor - 25A</string>
    <string name="nome_produto">Nome Produto</string>
    <string name="_20">20</string>
    <string name="salvar">SALVAR</string>
    <string name="disponivel">Disponivel</string>
    <string name="s">s</string>
    <string name="title_con_produto">Con. produto</string>


    <string-array name="lista_marcas">
        <item>Weg</item>
        <item>Marca 02</item>
        <item>Marca 03</item>
    </string-array>
</resources>